# star-tracker

./: .gitignore  SIFTER_implementation_context.md  pyproject.toml  visualize_centroids.py
src/: augment.py  centroiding.py  data.py  model.py  train.py
src/scripts/: render_scene.py
